backtest/archive/antigravity_test/db_check.txt
  File "<string>", line 25
    print(f'Columns in {t[\
                         ^
SyntaxError: '[' was never closed
